--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <center>
      <h1>This is My daily Tracker for RYAZ </h1>
       <a href="Day1.md">Day1</a>
+      <a href="Day2.md">Day2</a>
+      <a href="Day3.md">Day3</a>
     
 </center>
 </body>
