--- a/Day2.html
+++ b/Day2.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="container" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-
+    
     <h1 data-aos="fade-in" style="
     letter-spacing: 2px;
     text-transform: uppercase;
@@ -44,14 +44,14 @@
     <div class="eod" data-aos="fade-in">
       <h3>EOD &#x1F4A8;</h3>
       <ul>
-        <li>Finished Countdown Timer App &#x1F389;</li>
+        <li>Finished <a href="https://launchingtimer.vercel.app/">Countdown Timer App</a> &#x1F389</li>
         <li>Installed ESLint &#x1F4BB;</li>
         <li>Learned how to use it and configure it &#x2699;</li>
       </ul>
     </div>
 
-    <p data-aos="fade-in" data-aos-anchor-placement="top-bottom">I worked for 11 hours today exploring and building with Riaz &#x231B;</p>
-    <div data-aos="fade-right" style="overflow: hidden; text-align: center; margin-bottom: 50px;    display: flex;
+    <h3 data-aos="fade-in" data-aos-anchor-placement="top-bottom">I worked for 11 hours today exploring and building with Riaz &#x231B;</h3>
+    <div data-aos="zoom-in-up" style="overflow: hidden; text-align: center; margin-bottom: 50px;    display: flex;
     justify-content: space-around;"
       data-aos-anchor-placement="top-bottom">
       <a href="Day1.html">&#x2B05 Go to Day 1 </a>
