--- a/Day3.html
+++ b/Day3.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Day3 with RYAZ</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
+</head>
+
+<body>
+  <div class="container" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+    
+    <h1 data-aos="fade-in" style="
+    letter-spacing: 2px;
+    text-transform: uppercase;
+">Day3 with RYAZ.io &#x1F680;</h1>
+    <h3 data-aos="fade-in">My today's SOD is &#x1F4D1;</h3>
+    <ul data-aos="fade-in">
+      <li>Learn about AirBnd Eslint &#x1F504;</li>
+      <li>Apply EsLint in countdown timer ⏲️</li>
+      <li>Build an  Pizza Restaurent System using ReactJs and Express 🍕</li>
+    </ul>
+
+    <h3 data-aos="fade-in">Progress &#x1F4AA;</h3>
+    <ol class="progress" data-aos="fade-in">
+      <li>I started at 5:40 AM and I learnt about the AirBnd errors and fixes</li>
+      <li> I research about it till 6:15 AM and then i setted-up Eslint AirBnb for my Countdown timer.
+      </li>
+      <li>I got many erros in that and sometimes it is even difficult for me to resolve the errors, but after doing some google i got my fixes</li>
+      <li>I worked till 7:30 AM and take a break </li>
+      <li>I started working again and i got all the fixes till 12 PM</li>
+      <li>I got a Backend project work at 12:30 PM it was a project for building the backend API for a pizza restaurent</li>
+      <li>Then I moved on to that Project </li>
+      <ul>
+        <li>I have to build this using Airbnb EsLint and Nodejs, Express</li>
+        <li>I started working at 12:50 PM, It seems easy to me, but with ESlint i got many new errors</li>
+        <li>I worked on BackEnd till 13:23 PM</li>
+      </ul>
+      <li>I worked for 3hrs on Backend</li>
+      <li>I started FrontEnd at 5:47 PM Worked till 10:00 and then i came to know that i only need to build backend, then i leave it for Later free Time. </li>
+      <li> from tomorrow onwards i spend some time on DSA, from 3-4 days i didn't solve any question.</li>
+    </ol>
+
+    <div class="eod" data-aos="fade-in">
+      <h3>EOD &#x1F4A8;</h3>
+      <ul>
+        <li>setted up AirBnb Eslint</li>
+        <li>Finished <a href="https://launchingtimer.vercel.app/">Countdown Timer App with ESLint(AirBnb) 🎉</a> </li>
+        <li>Built Backend of Pizeria Application <a href="https://pizeriabackend.onrender.com/" >Pizeria</a> 🍕</li>
+        <li>The API usage is written on my repi <a href="https://github.com/Vansh1190/Pizeria"> </a></li>
+      </ul>
+    </div>
+
+    <h3 data-aos="fade-in" data-aos-anchor-placement="top-bottom">I worked for 8 hours today exploring and building with Riaz &#x231B;</h3>
+    <div data-aos="zoom-in-up" style="overflow: hidden; text-align: center; margin-bottom: 50px;    display: flex;
+    justify-content: space-around;"
+      data-aos-anchor-placement="top-bottom">
+      <a href="Day2.html">&#x2B05 Go to Day 2 </a>
+      <a href="Day4.html">Go to Day 4 &#x27A1;</a>
+    </div>
+    
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+</body>
+
+</html>
