--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
   <center>
      <h1>This is My daily Tracker for RYAZ </h1>
-      <a href="Day1.md">Day1</a>
-      <a href="Day2.md">Day2</a>
-      <a href="Day3.md">Day3</a>
+      <a href="Day1.html">Day1</a>
+      <a href="Day2.html">Day2</a>
+      <a href="Day3.html">Day3</a>
     
 </center>
 </body>
