--- a/Day3.html
+++ b/Day3.html
@@ -49,7 +49,7 @@
         <li>setted up AirBnb Eslint</li>
         <li>Finished <a href="https://launchingtimer.vercel.app/">Countdown Timer App with ESLint(AirBnb) 🎉</a> </li>
         <li>Built Backend of Pizeria Application <a href="https://pizeriabackend.onrender.com/" >Pizeria</a> 🍕</li>
-        <li>The API usage is written on my repi <a href="https://github.com/Vansh1190/Pizeria"> </a></li>
+        <li>The API usage is written on my repo <a href="https://github.com/Vansh1190/Pizeria">Pizeria Github</a></li>
       </ul>
     </div>
 
