--- a/Day5.html
+++ b/Day5.html
@@ -45,7 +45,7 @@
     </ol>
 
     <div class="eod" data-aos="fade-in">
-      <h3>EOD &#x1F4A8;</h3>
+      <h3>EOD 🎯;</h3>
       <ul>
         <li>successfully released Pizeria API v2.1 on render.✔️</li>
         <li>Created a spreadsheet for my project.</a> </li>
