--- a/Day18.html
+++ b/Day18.html
@@ -75,13 +75,14 @@
       <ul>
         <!-- <li>successfully fixed the otp service✔️</li> -->
         <!-- <li>Built the AllChats Page</a> </li> -->
-        <li>Made a Readme file for Chatverse</a> </li>
+        <li>Added Reload feature in ChatVerse</a> </li>
         <li><a href="chatuniverse.vercel.app">ChatVerse</a></li>
-        <li>Identifies bugs from App</li>
+        <li>Researched about E2E encryption and Listed down some features of ChatVerse.</li>
+        <li></li>
         <!-- <li>Pizeria Application v2.1 <a href="https://pizeriabackend.onrender.com/" >Pizeria</a> 🍕</li>
         <li>The API usage is written on my repo <a href="https://github.com/Vansh1190/Pizeria">Pizeria Github</a></li> -->
         <!-- <li>My Chatting page is g till now.</li> -->
-        <li>Researched about E2E encryption</li>
+        <!-- <li>Researched about E2E encryption</li> -->
       </ul>
     </div>
 
@@ -89,8 +90,8 @@
     <div data-aos="zoom-in-up" style="overflow: hidden; text-align: center; margin-bottom: 50px;    display: flex;
     justify-content: space-around;"
       data-aos-anchor-placement="top-bottom">
-      <a href="Day16.html">&#x2B05 Go to Day 16 </a>
-      <a href="Day18.html">Go to Day 18 &#x27A1;</a>
+      <a href="Day17.html">&#x2B05 Go to Day 17 </a>
+      <a href="Day19.html">Go to Day 19 &#x27A1;</a>
     </div>
     
   </div>
