--- a/Day18.html
+++ b/Day18.html
@@ -78,7 +78,7 @@
         <li>Added Reload feature in ChatVerse</a> </li>
         <li><a href="chatuniverse.vercel.app">ChatVerse</a></li>
         <li>Researched about E2E encryption and Listed down some features of ChatVerse.</li>
-        <li></li>
+        <li>Learned about how to add push notification</li>
         <!-- <li>Pizeria Application v2.1 <a href="https://pizeriabackend.onrender.com/" >Pizeria</a> 🍕</li>
         <li>The API usage is written on my repo <a href="https://github.com/Vansh1190/Pizeria">Pizeria Github</a></li> -->
         <!-- <li>My Chatting page is g till now.</li> -->
