--- a/Day21.html
+++ b/Day21.html
@@ -31,8 +31,7 @@
       <li>Then i started again at 11:00 AM </li>
       <li>I worked till 1:45 PM then took a break, reasearched about buffet and blob data,
       finally i get that inage in front-end, but still i am getting a problem, i am able to share only 1 mb of image.</li>
-      <li>Then, i took a break,
-  I added the Connect with friends feature till 2:45 PM</li>
+      <li>Then, i took a break, and started again at 4:00 PM, I added the Connect with friends feature till 6:45 PM</li>
       
     <!--  <li>then i started working on enhancing security of application,</li>
       <li>Added some routes and modified some headers in backEnd</li>
@@ -71,7 +70,7 @@
       </ul>
     </div>
 
-    <h3 data-aos="fade-in" data-aos-anchor-placement="top-bottom">I worked for 6:00 hours today exploring and building with Riaz &#x231B;</h3>
+    <h3 data-aos="fade-in" data-aos-anchor-placement="top-bottom">I worked for 7:00 hours today exploring and building with Riaz &#x231B;</h3>
     <div data-aos="zoom-in-up" style="overflow: hidden; text-align: center; margin-bottom: 50px;    display: flex;
     justify-content: space-around;"
       data-aos-anchor-placement="top-bottom">
