--- a/Day10.html
+++ b/Day10.html
@@ -52,7 +52,7 @@
       <ul>
         <li>successfully released Chatverse app✔️</li>
         <li>Working Otp authentication</a> </li>
-        <li><a href="chatuniverse.vercel.app">ChatVerse</a></li>
+        <li><a href="https://chatuniverse.vercel.app">ChatVerse</a></li>
         <!-- <li>Pizeria Application v2.1 <a href="https://pizeriabackend.onrender.com/" >Pizeria</a> 🍕</li>
         <li>The API usage is written on my repo <a href="https://github.com/Vansh1190/Pizeria">Pizeria Github</a></li> -->
         <li>I finished all my pending tasks till now 🥳</li>
