--- a/Day11.html
+++ b/Day11.html
@@ -53,7 +53,7 @@
         <li>successfully fixed the otp service✔️</li>
         <li>Built the getting started page</a> </li>
         <li>Built the signup page</a> </li>
-        <li><a href="chatuniverse.vercel.app">ChatVerse</a></li>
+        <li><a href="https://chatuniverse.vercel.app">ChatVerse</a></li>
         <!-- <li>Pizeria Application v2.1 <a href="https://pizeriabackend.onrender.com/" >Pizeria</a> 🍕</li>
         <li>The API usage is written on my repo <a href="https://github.com/Vansh1190/Pizeria">Pizeria Github</a></li> -->
         <li>My FrontEnd task is pending till now.</li>
