--- a/Day12.html
+++ b/Day12.html
@@ -52,7 +52,7 @@
         <!-- <li>successfully fixed the otp service✔️</li> -->
         <li>Built the verification page</a> </li>
         <li>Built the Signin page</a> </li>
-        <li><a href="chatuniverse.vercel.app">ChatVerse</a></li>
+        <li><a href="https://chatuniverse.vercel.app">ChatVerse</a></li>
         <!-- <li>Pizeria Application v2.1 <a href="https://pizeriabackend.onrender.com/" >Pizeria</a> 🍕</li>
         <li>The API usage is written on my repo <a href="https://github.com/Vansh1190/Pizeria">Pizeria Github</a></li> -->
         <li>My Chatting page is pending till now.</li>
