--- a/Day18.html
+++ b/Day18.html
@@ -76,7 +76,7 @@
         <!-- <li>successfully fixed the otp service✔️</li> -->
         <!-- <li>Built the AllChats Page</a> </li> -->
         <li>Added Reload feature in ChatVerse</a> </li>
-        <li><a href="chatuniverse.vercel.app">ChatVerse</a></li>
+        <li><a href="https://chatuniverse.vercel.app">ChatVerse</a></li>
         <li>Researched about E2E encryption and Listed down some features of ChatVerse.</li>
         <li>Learned about how to add push notification</li>
         <!-- <li>Pizeria Application v2.1 <a href="https://pizeriabackend.onrender.com/" >Pizeria</a> 🍕</li>
