--- a/Day21.html
+++ b/Day21.html
@@ -62,7 +62,7 @@
         <!-- <li>Built the AllChats Page</a> </li> -->
         <li>User will now able to share images in their chat. se</a> </li>
         <li>Added Connect with friends feature</li>
-        <li><a href="chatuniverse.vercel.app">ChatVerse</a></li>
+        <li><a href="https://chatuniverse.vercel.app">ChatVerse</a></li>
         <!-- <li>Pizeria Application v2.1 <a href="https://pizeriabackend.onrender.com/" >Pizeria</a> 🍕</li>
         <li>The API usage is written on my repo <a href="https://github.com/Vansh1190/Pizeria">Pizeria Github</a></li> -->
         <!-- <li>My Chatting page is g till now.</li> -->
