--- a/Day23.html
+++ b/Day23.html
@@ -71,7 +71,7 @@
 <!--         <li></a> </li> -->
         <li>Added Notification Feature,</li>
         <li>Added online indicator</li>
-        <li><a href="chatuniverse.vercel.app">ChatVerse</a></li>
+        <li><a href="https://chatuniverse.vercel.app">ChatVerse</a></li>
         <!-- <li>Pizeria Application v2.1 <a href="https://pizeriabackend.onrender.com/" >Pizeria</a> 🍕</li>
         <li>The API usage is written on my repo <a href="https://github.com/Vansh1190/Pizeria">Pizeria Github</a></li> -->
         <!-- <li>My Chatting page is g till now.</li> -->
