--- a/Day25.html
+++ b/Day25.html
@@ -75,7 +75,7 @@
         <li>Worked on Finalizing Notification feature</li>
         <!-- <li>Worked on notification featu</li> -->
         <li>Notification feature is pending.</li>
-        <li><a href="chatuniverse.vercel.app">ChatVerse</a></li>
+        <li><a href="https://chatuniverse.vercel.app">ChatVerse</a></li>
         <!-- <li>Pizeria Application v2.1 <a href="https://pizeriabackend.onrender.com/" >Pizeria</a> 🍕</li>
         <li>The API usage is written on my repo <a href="https://github.com/Vansh1190/Pizeria">Pizeria Github</a></li> -->
         <!-- <li>My Chatting page is g till now.</li> -->
