--- a/Day26.html
+++ b/Day26.html
@@ -83,8 +83,8 @@
         <!-- <li>Worked on notification featu</li> -->
         <li>Finished Notification feature.</li>
         <li>Working now for Both Web and Android APk</li>
-        <li><a href="chatuniverse.vercel.app">ChatVerse</a></li>
-        <li>Mobile App versionn<a href="#">Releasing Soon</a></li>
+        <li><a href="https://chatuniverse.vercel.app">ChatVerse</a></li>
+        <li>Mobile App versionn<a style="text-decoration: line-through;" href="https://chatversego.vercel.app">Releasing Soon</a><a href="https://chatversego.vercel.app">Releasing Soon</a></li>
         <!-- <li>Pizeria Application v2.1 <a href="https://pizeriabackend.onrender.com/" >Pizeria</a> 🍕</li>
         <li>The API usage is written on my repo <a href="https://github.com/Vansh1190/Pizeria">Pizeria Github</a></li> -->
         <!-- <li>My Chatting page is g till now.</li> -->
