--- a/Day28.html
+++ b/Day28.html
@@ -76,7 +76,7 @@
         <li>Styling of Landing Page is Done,</li>
         <!-- <li>Worked on notification featu</li> -->
         <!-- <li>Notification feature is pending.</li> -->
-        <li><a href="chatversego.vercel.app">ChatVerse</a></li>
+        <li><a href="https://chatversego.vercel.app">ChatVerse</a></li>
         <!-- <li>Pizeria Application v2.1 <a href="https://pizeriabackend.onrender.com/" >Pizeria</a> 🍕</li>
         <li>The API usage is written on my repo <a href="https://github.com/Vansh1190/Pizeria">Pizeria Github</a></li> -->
         <!-- <li>My Chatting page is g till now.</li> -->
