--- a/Day29.html
+++ b/Day29.html
@@ -77,7 +77,7 @@
         <!-- <li>successfully fixed the otp service✔️</li> -->
         <!-- <li>Built the AllChats Page</a> </li> -->
 <!--         <li></a> </li> -->
-        <li>Deployed Landing Page for <a href="chatversego.vercel.app">ChatVerse</a></li>
+        <li>Deployed Landing Page for <a href="https://chatversego.vercel.app">ChatVerse</a></li>
         <li>Added forget password feature</li>
         <!-- <li>Worked on notification featu</li> -->
         <!-- <li>Notification feature is pending.</li> -->
