--- a/Day30.html
+++ b/Day30.html
@@ -80,7 +80,7 @@
         <!-- <li>successfully fixed the otp service✔️</li> -->
         <!-- <li>Built the AllChats Page</a> </li> -->
 <!--         <li></a> </li> -->
-        <li>Deployed Publically Landing Page for <a href="https://chatversego.vercel.app">ChatVerse</a></li>
+        <li>Deployed Publically the Landing Page for <a href="https://chatversego.vercel.app">ChatVerse</a></li>
         <li>Creeated signup and login pages for SportsMeet2024</li>
         <!-- <li>Worked on notification featu</li> -->
         <!-- <li>Notification feature is pending.</li> -->
