--- a/Day30.html
+++ b/Day30.html
@@ -81,7 +81,7 @@
         <!-- <li>Built the AllChats Page</a> </li> -->
 <!--         <li></a> </li> -->
         <li>Deployed Publically the Landing Page for <a href="https://chatversego.vercel.app">ChatVerse</a></li>
-        <li>Creeated signup and login pages for SportsMeet2024</li>
+        <li>Created signup and login pages for SportsMeet2024</li>
         <!-- <li>Worked on notification featu</li> -->
         <!-- <li>Notification feature is pending.</li> -->
         <!-- <li><a href="chatversego.vercel.app">ChatVerse</a></li> -->
