Added day 31 and day32.html

--- a/Day31.html
+++ b/Day31.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day29 with RYAZ</title>
+  <title>Day30 with RYAZ</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
 </head>
@@ -15,11 +15,11 @@
     <h1 data-aos="fade-in" style="
     letter-spacing: 2px;
     text-transform: uppercase;
-">Day29 with RYAZ.io &#x1F680;</h1>
+">Day30 with RYAZ.io &#x1F680;</h1>
     <h3 data-aos="fade-in">My today's SOD is &#x1F4D1;</h3>
     <ul data-aos="fade-in">
-      <li>Finalizing Landing Page</li>
-      <li>Working on Forget Password Feature</li>
+      <li>Building Academic Details Page for SportsMeet2024 </li>
+      <li>Fixed some bugs and Style Pages</li>
       <!-- <li></li>
       <li>Working on notification feature.</li> -->
       
@@ -27,23 +27,28 @@
 
     <h3 data-aos="fade-in">Progress &#x1F4AA;</h3>
     <ol class="progress" data-aos="fade-in">
-      <li>I started working at 5:30 AM and I started wraping up my Landing Page .</li>
-      <li>Changed some Colors and added responsive support.</li>
+      <li>I started working at 5:45 AM and I started with building Academic details page.</li>
+      <li>Getting some problems while building this pages,</li>
+
       <!-- <li>Basic structure of my website is now ready, I have to Styling with CSS now.</li> -->
       <!-- <li>Explored some Good websites like <a href="https://cssgradient.io/">CSS Gradient.</a></li> -->
       <!-- <li>I started working on it.</li> -->
-      <li>Worked till 8:45 AM</li>
-      <li>Then i started working again at 1:00 PM</li>
-      <li>Started working on added Feature of forget password at backend</li>
-      <li>Added the Forget Password Feature successfully</li>
-      <li>Now i came to frontEnd Part.</li>
-      <li>User will have to put an OTP for Changing Password.</li>
+      <li>We Signup the User in 4 steps</li>
+      <li>Create Account, then Verification, then Login, then Academic Details, if a user successfully filled all the information only then he is able to select sports in which he/she wants to participate</li>
+      <li>Academic details contains fields like- URN, Course, branch, year</li>
+      <li>Worked till 8:15 AM<0/li>
+      <li>It is partially completed, some validation and alerts were left.</li>
+      <li>Then i started again at 12:00 PM,</li>
+      <li>Finished Academic details page. added alerts and verification</li>
       <li>Worked till 4:15 PM</li>
       <li>then I took a break.</li>
-      <li>Started working again at 5:40 PM</li>
-      <li>Now the Forget Password is working</li>
-      <li>Deployed my website</li>
-      <li>Worked till 8:30PM</li>
+      <li>Started working again at 9:00 PM</li>
+      <li>Also Fixed some bugs and did some styling change in previous login and auth Pages</li>
+      <li>Fixed some bugs in backend and frontend</li>
+      <li>Worked till 10:40PM</li>
+      <!-- <li>Now the Forget Password is working</li> -->
+      <!-- <li>Deployed my website</li> -->
+      <!-- <li>User will have </li> -->
       <!-- <li>Then i took a break</li> -->
       <!-- <li>Finally i built it, Now the users get's the Realtime update who is online and who is offline. didn't need to reload the application.</li> -->
       <!-- <li></li> -->
@@ -77,8 +82,8 @@
         <!-- <li>successfully fixed the otp service✔️</li> -->
         <!-- <li>Built the AllChats Page</a> </li> -->
 <!--         <li></a> </li> -->
-        <li>Deployed Landing Page for <a href="https://chatversego.vercel.app">ChatVerse</a></li>
-        <li>Added forget password feature</li>
+        <li>Built Academic details page with styling and validations.</li>
+        <li>Fixed some previous pages</li>
         <!-- <li>Worked on notification featu</li> -->
         <!-- <li>Notification feature is pending.</li> -->
         <!-- <li><a href="chatversego.vercel.app">ChatVerse</a></li> -->
@@ -89,12 +94,12 @@
       </ul>
     </div>
 
-    <h3 data-aos="fade-in" data-aos-anchor-placement="top-bottom">I worked for 9:20 hours today exploring and building with Riaz &#x231B;</h3>
+    <h3 data-aos="fade-in" data-aos-anchor-placement="top-bottom">I worked for 8:25 hours today exploring and building with Riaz &#x231B;</h3>
     <div data-aos="zoom-in-up" style="overflow: hidden; text-align: center; margin-bottom: 50px;    display: flex;
     justify-content: space-around;"
       data-aos-anchor-placement="top-bottom">
-      <a href="Day28.html">&#x2B05; Go to Day 28 </a>
-      <a href="Day30.html">Go to Day 30 &#x27A1;</a>
+      <a href="Day30.html">&#x2B05; Go to Day 30 </a>
+      <a href="Day32.html">Go to Day 32 &#x27A1;</a>
     </div>
     
   </div>
