--- a/Day30.html
+++ b/Day30.html
@@ -27,7 +27,7 @@
 
     <h3 data-aos="fade-in">Progress &#x1F4AA;</h3>
     <ol class="progress" data-aos="fade-in">
-      <li>I started working at 6:00 AM and We started with building Auth Pages.</li>
+      <li>I started working at 6:00 AM and I started with building Auth Pages.</li>
       <li>Made the Signup pages, I know the previous project. I took some reference from that project as well</li>
       <!-- <li>Basic structure of my website is now ready, I have to Styling with CSS now.</li> -->
       <!-- <li>Explored some Good websites like <a href="https://cssgradient.io/">CSS Gradient.</a></li> -->
@@ -80,7 +80,7 @@
         <!-- <li>successfully fixed the otp service✔️</li> -->
         <!-- <li>Built the AllChats Page</a> </li> -->
 <!--         <li></a> </li> -->
-        <li>Deployed Publically the Landing Page for <a href="https://www.linkedin.com/feed/update/urn:li:activity:7092121400974467072/">ChatVerse</a></li>
+        <li>Deployed Publically the Landing Page for <a href="https://chatversego.vercel.app">ChatVerse</a></li>
         <li>Created signup and login pages for SportsMeet2024</li>
         <!-- <li>Worked on notification featu</li> -->
         <!-- <li>Notification feature is pending.</li> -->
@@ -96,7 +96,7 @@
     <div data-aos="zoom-in-up" style="overflow: hidden; text-align: center; margin-bottom: 50px;    display: flex;
     justify-content: space-around;"
       data-aos-anchor-placement="top-bottom">
-      <a href="Day29.html">&#x2B05 Go to Day 29 </a>
+      <a href="Day29.html">&#x2B05; Go to Day 29 </a>
       <a href="Day31.html">Go to Day 31 &#x27A1;</a>
     </div>
     
