--- a/Day35.html
+++ b/Day35.html
@@ -93,9 +93,9 @@
         <!-- <li>successfully fixed the otp service✔️</li> -->
         <!-- <li>Built the AllChats Page</a> </li> -->
 <!--         <li></a> </li> -->
-        <li>Fixed Routing of all APP</li>
-        <li>Built UserProfile Page</li>
-        <li>Select Events Page is currently pending.</li>
+        <li>Build User Profile Page</li>
+        <li>Worked on Events Enrollments Page</li>
+        <li>Some things are pending in My Enrollments Page.</li>
         <!-- <li>Worked on SRS document</li> -->
         <!-- <li>Worked on notification featu</li> -->
         <!-- <li>Notification feature is pending.</li> -->
