Updated Day34 and #%

--- a/Day34.html
+++ b/Day34.html
@@ -48,7 +48,7 @@
       <!-- <li>then I took a break.</li> -->
       <li>Started working again at 6:00 PM</li>
       <li>Started working on User Profile Page,</li>
-      <li>Finall I worked till 8:00 PM</li>
+      <li>Finally I worked till 8:00 PM</li>
       <!-- <li>Worked till 11:15 PM</li> -->
       <!-- <li>Now the Forget Password is working</li> -->
       <!-- <li>Deployed my website</li> -->
