--- a/Day37.html
+++ b/Day37.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale61.0">
-  <title>Day35 with RYAZ</title>
+  <title>Day37 with RYAZ</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
 </head>
@@ -15,11 +15,11 @@
     <h1 data-aos="fade-in" style="
     letter-spacing: 2px;
     text-transform: uppercase;
-">Day35 with RYAZ.io &#x1F680;</h1>
+">Day37 with RYAZ.io &#x1F680;</h1>
     <h3 data-aos="fade-in">My today's SOD is &#x1F4D1;</h3>
     <ul data-aos="fade-in">
-        <li>Building Select Events Page </li>
-        <li>Building My EnrollMents Page> </li>
+        <li>Working on Certidicate Section </li>
+        <!-- <li>Building My EnrollMents Page> </li> -->
 
       <!-- <li>Improve SRS document.</li> -->
       <!-- <li></li>
@@ -29,26 +29,27 @@
 
     <h3 data-aos="fade-in">Progress &#x1F4AA;</h3>
     <ol class="progress" data-aos="fade-in">
-      <li>I started working at  6:00 AM and I started on Select Events Page</li>
-      <li>User can select their events by going on this Page,</li>
-      <li>Added some conditions for User</li>
-      <li>Worked till 8:15 AM</li>
-      <li>Started working again at 1:00 PM</li>
+      <li>I started working at  6:00 AM and I started on Certificate Page</li>
+      <li>User can download their events Certificate by going on Certificate page,</li>
+      <li>Added Build ui for the Page, added functionality for downloading Certificate.</li>
+      <li>Worked till 8:30 AM</li>
+      <li>Started again at 11:00 AM</li>
       <!-- <li>Basic structure of my website is now ready, I have to Styling with CSS now.</li> -->
       <!-- <li>Explored some Good websites like <a href="https://cssgradient.io/">CSS Gradient.</a></li> -->
       <!-- <li>I started working on it.</li> -->
       <!-- <li>I like the jotai state-management, but i didn't know how to implement it correctly,</li> -->
       <!-- <li>Did some research on jotai</li> -->
-      <li>Working on styling and doing some Changes in approach.</li>
-      <li>Then i started working on My Enrollments page.</li>
-      <li>In this Page user can see the events in which they are participating.</li>
+      <li>I want to share my app with my friends, so i  tried to build my project on Vercel.</li>
+      <li>I am getting error in Building the application.</li>
+      <li>I spend to much time on that, didn't know why i am getting this error.</li>
       <li>Decided to take some break at 3:25 PM</li>
       <!-- <li>Then i started again at 11:30 AM,</li> -->
-      <li>Started again 4:30 PM, on My enrollments page</li>
+      <li>Started again 4:30 PM, in Certificate Page, leave the deployment error for tommorow.</li>
       <!-- <li></li> -->
-      <li>Added some styling</li>
-      <li>Worked till 6:45 PM</li>
-      <li>Worked for 1 Hr on My enrollments Page, from 10:00 PM</li>
+      <li>The Certificate is downloading successfully on web version of app, but didn't downloading in Android app</li>
+      <li>Worked till 7:00 PM</li>
+      <li>Then i took a break, and still the error is not resolved</li>
+      <li>Worked for 1hr  from 9:00 PM</li>
       <!-- <li>I am really upset with the errors of typeScript for easy-peasy, it takes my so much time</li> -->
       <!-- <li>Take a break at 3:30 PM</li> -->
       <!-- <li>then I took a break.</li> -->
@@ -93,9 +94,10 @@
         <!-- <li>successfully fixed the otp service✔️</li> -->
         <!-- <li>Built the AllChats Page</a> </li> -->
 <!--         <li></a> </li> -->
-        <li>Build User Profile Page</li>
-        <li>Worked on Events Enrollments Page</li>
-        <li>Some things are pending in My Enrollments Page.</li>
+        <li>Build Certificate Page</li>
+        <!-- <li>Worked on Events Enrollments Page</li> -->
+        <!-- <li>Some things are pending in My Enrollments Page.</li> -->
+        <li>Android Certificate page is still pending </li>
         <!-- <li>Worked on SRS document</li> -->
         <!-- <li>Worked on notification featu</li> -->
         <!-- <li>Notification feature is pending.</li> -->
@@ -106,12 +108,12 @@
       </ul>
     </div>
 
-    <h3 data-aos="fade-in" data-aos-anchor-placement="top-bottom">I worked for 8:00 hours today exploring and building with Riaz &#x231B;</h3>
+    <h3 data-aos="fade-in" data-aos-anchor-placement="top-bottom">I worked for 10:00 hours today exploring and building with Riaz &#x231B;</h3>
     <div data-aos="zoom-in-up" style="overflow: hidden; text-align: center; margin-bottom: 50px;    display: flex;
     justify-content: space-around;"
       data-aos-anchor-placement="top-bottom">
-      <a href="Day34.html">&#x2B05; Go to Day 34 </a>
-      <a href="Day36.html">Go to Day 36 &#x27A1;</a>
+      <a href="Day36.html">&#x2B05; Go to Day 36 </a>
+      <a href="Day38.html">Go to Day 38 &#x27A1;</a>
     </div>
     
   </div>
